[package]
name = "stack-overflow-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid", "chrono"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
